import SwiftUI

enum ShopGenre: String, CaseIterable, Codable {
    case ramen = "ラーメン"
    case cafe = "カフェ"
    case izakaya = "居酒屋"
    case yakiniku = "焼肉"
    case sushi = "寿司"
    case sweets = "スイーツ"
    case fastFood = "ファストフード"
    case restaurant = "レストラン"
...
